# remocaml

./: .gitignore  all.gup  compile.gup  default.nix  obus_notes.txt  opam-deps.txt.gup  release.gup  remocaml.opam  run.sh  server.gup  shell.nix
nix/: default.nix  lock.nix  lock.nix.gup  num.json  opam-selection.nix  opam-selection.nix.gup  sources.json  src.in.json  src.json  wrangle.json
src/: flags
src/cli/: dune  irank_mpris.ml  remocaml.ml
src/common/: dune  event.ml  irank.ml  jbuild  job.ml  list_ext.ml  lwt_ext.ml  music.ml  option.ml  rresult_ext.ml  state.ml  util.ml
src/server/: connections.ml  dune  events.mlx  jbuild  main.ml  pulseaudio_client.ml  pulseaudio_interfaces.ml  react_ext.ml  rhythmbox.xml  rhythmbox_client.ml  rhythmbox_client.mli  rhythmbox_interfaces.ml  server_config.ml  server_irank.ml  server_job.ml  server_logs.ml  server_music.ml  server_state.ml  unix_ext.ml
src/www/: bootstrap.min.css  dune  index.html  jbuild  main.ml  style.scss  ui_state.ml  view.ml
src/www/resources/: dune
