; vim: set syntax=lisp commentstring=;\ %s:
(executable
	; (allow_overlapping_dependencies)
	(flags (:include ../flags))
	(name main)
	(public_name remocaml)
	(libraries
		remo_common
		astring
		lwt
		logs.fmt
		cohttp
		cohttp-lwt
		cohttp-lwt-unix
		obus
		str
	)
	(preprocess (pps ppx_sexp_conv ppx_fields_conv lwt_ppx))
)

(alias
	(name all)
	(deps
		main.exe
	)
)
