; vim: set syntax=lisp commentstring=;\ %s:
(executable
	(name main)
	(libraries
		remo_common
		js_of_ocaml
		js_of_ocaml-lwt
		; js_of_ocaml.weak
		lwt_react
		logs
		uri
		fieldslib
		sexplib
		vdoml
	)
	(js_of_ocaml
		(flags (:standard --source-map))
	)
	(preprocess (pps lwt.ppx ppx_sexp_conv ppx_fields_conv js_of_ocaml.ppx))
)

(rule
	(targets style.css)
	(deps style.scss)
	(action (run sassc style.scss %{targets}))
)

(alias
	(name all)
	(deps
		index.html
		style.css
		bootstrap.min.css
		main.bc.js
	)
)
