; vim: set syntax=lisp commentstring=;\ %s:
(executable
	(name main)
	(libraries
		remo_common
		js_of_ocaml
		js_of_ocaml-lwt
		; js_of_ocaml.weak
		lwt_react
		logs
		uri
		fieldslib
		sexplib
		vdoml
	)
	(js_of_ocaml
		(flags (:standard --source-map))
	)
	(preprocess (pps lwt_ppx ppx_sexp_conv ppx_fields_conv js_of_ocaml.ppx))
)

(rule
	(targets style.css)
	(deps style.scss
		(glob_files scss/*)
		(glob_files webfonts/*)
	)
	(action (run sassc style.scss %{targets}))
)

(install
	(section share)
	(files
		main.bc.js
		bootstrap.min.css
	)
)

; see https://github.com/ocaml/dune/issues/256#issuecomment-361242074
; (rule
; 	(targets res-install.dune)
; 	(deps (universe))
; 	(action (run ./res-install.dune.gup %{targets} %{targets}))
; 	(mode promote)
; )
; (include res-install.dune)


(alias
	(name all)
	(deps
		index.html
		style.css
		bootstrap.min.css
		main.bc.js
	)
)
