(* -*- tuareg -*- *)
(* vim: syntax=ocaml
 *)
(* psuedo-module to dynamically install various files from ../ *)
let () =
	let root = ".." in
	let dirs = [
		"webfonts";
	] in
	let file_list = dirs |> List.map (fun dir ->
		let prefix = Filename.concat root dir in
		Sys.readdir prefix |> Array.to_list |> List.map (fun file ->
			Printf.sprintf "(%s as %s)"
				(Filename.concat prefix file)
				(Filename.concat dir file)
		)
	) |> List.concat |> List.sort compare in
	[
		"(install";
			"(section share)";
			"(files";
			] @ file_list @ [
			")";
		")";
	] |> String.concat "\n" |> Jbuild_plugin.V1.send
